# ApkDownloader

./: .env.sample  .gitignore  ApkDownloader.py  LICENSE  README-ja.md  README.md  config.yaml  config.yaml.example  logger_config.json  pyproject.toml  requirements.txt  settings.py  test_data.csv
src/: ApkDownloader.py  cache_handler.py  config_manager.py  progress_manager.py  settings.py  utils.py
