[project]
name = "apkdownloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.27.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
indent-style = "space"


[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
]
typeCheckingMode = "strict"

reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportAssertAlwaysTrue = true
reportMatchNotExhaustive = true
reportImplicitOverride = true
reportMissingSuperCall = true
reportUnusedCoroutine = true

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.11",
]
